Add WebView configuration